feat: create gastos
